feat: wallet balance
