# internal/delivery/http/router.go
@@ -18,6 +18,7 @@ func NewRouter(
 	walletUC *usecase.WalletUseCase,
 	txnUC *usecase.TxnUseCase,
 	authUC *usecase.AuthUseCase,
+	balanceUC *usecase.BalanceUseCase,
 	jwtService *auth.JWTService,
 	log *logrus.Logger,
 ) *gin.Engine {
@@ -31,6 +32,7 @@ func NewRouter(
 	userHandler := handler.NewUserHandler(userUC)
 	walletHandler := handler.NewWalletHandler(walletUC)
 	txnHandler := handler.NewTxnHandler(*txnUC)
+	balanceHanlder := handler.NewBalanceHandler(*balanceUC)
 
 	v1 := router.Group("/api/v1")
 	{
@@ -74,6 +76,12 @@ func NewRouter(
 		{
 			publicTransactions.GET("/", txnHandler.GetTransactions)
 			publicTransactions.GET("/:id", txnHandler.GetDetail)
+		}
+
+		balance := v1.Group("/balances")
+		balance.Use(middleware.AuthMiddleware(*jwtService))
+		{
+			balance.GET("/:walletId", balanceHanlder.GetBalances)
 		}
 	}
 
